# gamelink-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  amalgam_check.cpp  amalgamate.in  amalgamate.sh  bitbucket-pipelines.yml  clibrary_check.cpp  create_osx_dylibs.sh  demo.cpp  dockerentry.sh  gamelink_single.hpp  vcpkg.json  websocket.cpp
.github/: CODEOWNERS
.github/workflows/: build-linux-x64.yml  run-tests.yml
c_library/: gamelink_c.cpp  gamelink_c.h  gamelink_c_config.cpp  gamelink_c_datastream.cpp  gamelink_c_drops.cpp  gamelink_c_error.cpp  gamelink_c_interop.h  gamelink_c_matchmaking.cpp  gamelink_c_network.cpp  gamelink_c_patchlist.cpp  gamelink_c_poll.cpp  gamelink_c_purchases.cpp  gamelink_c_state.cpp  gateway_c.cpp  gateway_c.h
docker/integration-tests/: Dockerfile  README
docs/: Dockerfile  conf.py  docker-build-docs.sh  gamelink.rst  generate.sh  index.rst
docs/_static/css/: sphinx.css
doxygen/: Doxyfile.in
examples/: CMakeLists.txt  README.md  config-example.json
examples/01-authenticate/: CMakeLists.txt  main.cpp
examples/02-voting/: CMakeLists.txt  main.cpp
examples/03-state/: CMakeLists.txt  main.cpp
examples/04-broadcast/: CMakeLists.txt  main.cpp
examples/05-transaction/: CMakeLists.txt  main.cpp
examples/shared/: load_configuration.h
include/: config.h  config_footer.h  gamelink.h  gamelink_c.h  gateway.h  websocket.h
schema/: authentication.cpp  authentication.h  broadcast.cpp  broadcast.h  config.h  consts.h  datastream.cpp  datastream.h  drops.cpp  drops.h  envelope.cpp  envelope.h  game_config.cpp  game_config.h  game_metadata.h  limits.h  matches.h  matchmaking.cpp  matchmaking.h  poll.cpp  poll.h  purchase.cpp  purchase.h  schema.h  serialization.h  state.cpp  state.h  subscription.h
schema/test/: authentication.cpp  basic_serialiation.cpp  broadcast.cpp  poll.cpp  state.cpp  util.h
src/: gamelink.cpp  gamelink.h  gamelink.hpp  gamelink_authentication.cpp  gamelink_c.cpp  gamelink_config.cpp  gamelink_datastream.cpp  gamelink_drops.cpp  gamelink_matches.cpp  gamelink_matchmaking.cpp  gamelink_poll.cpp  gamelink_purchases.cpp  gamelink_state.cpp  gamelink_subscriptionsets.cpp  gateway.cpp  gateway_actions.cpp  gateway_gametexts.cpp  gateway_matches.cpp  gateway_purchases.cpp
src/test/: authentication.cpp  broadcast.cpp  errors.cpp  poll.cpp  purchase.cpp  state.cpp
test/: authentication.cpp  basic_serialiation.cpp  basic_serialization.cpp  broadcast.cpp  callbacks.cpp  clibrary_tests.cpp  connectionurl.cpp  constrained_string.h  constrained_types.h  datastream.cpp  drops.cpp  errors.cpp  game_config.cpp  gamelink.cpp  gateway_actions.cpp  gateway_gamemetadata.cpp  gateway_matches.cpp  gateway_poll.cpp  gateway_texts.cpp  integration.cpp  integration_http.h  integration_utils.cpp  integration_utils.h  matches.cpp  matchmaking.cpp  poll.cpp  purchase.cpp  receive_message.cpp  reconnect.cpp  state.cpp  string.cpp  util.h  waits.cpp
websocket_network/: websocket.cpp  websocket.h
